<resources>
    <string name="app_name">Gokulraj_Vinny_COMP304Lab4</string>
    <string name="activity_name">GV HOSPITALS</string>
    <string name="patients_btn_text">Patients</string>
    <string name="tests_btn_text">Tests</string>
    <string name="logout_btn_text">Logout</string>
    <string name="login_title">Login</string>
    <string name="nurse_id_hint">Nurse Id</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="add_test">Add Test</string>
    <string name="regsiter">Register</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_department">"Patient Department: "</string>
    <string name="patient_room">"Patient Room: "</string>
    <string name="test_id">Test Id: </string>
    <string name="bpl">BPL: </string>
    <string name="bph">BPH: </string>
    <string name="temperature">Temperature: </string>
    <string name="welcome">WELCOME</string>
</resources>