<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/test_item"
    android:clickable="true">

    <TextView
        android:id="@+id/testId"
        android:text="@string/test_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/testBPL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/testBPL"
        android:text="@string/bpl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/testId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/testBPH"
        />

    <TextView
        android:id="@+id/testBPH"
        android:text="@string/bph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/testBPL"
        app:layout_constraintBottom_toTopOf="@+id/testtemp"
        />

    <TextView
        android:id="@+id/testtemp"
        android:text="@string/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/testBPH"
        />

</androidx.constraintlayout.widget.ConstraintLayout>